--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="759b6d">  <td>22/01/25 10:01:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.ReservationTest@3aeaafa6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1209669119</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/25 10:01:51</td>   <td>17205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.FailedTestCases(org.testng.ITestResult)[pri:0, instance:com.test.ReservationTest@3aeaafa6]">&lt;&lt;FailedTestCases</td> 
-<td>&nbsp;</td>  <td>main@1209669119</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/25 10:01:34</td>   <td>-29</td> <td title="&gt;&gt;BaseClass.setUpEnv()[pri:0, instance:com.test.ReservationTest@3aeaafa6]">&gt;&gt;setUpEnv</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1209669119</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/25 10:01:43</td>   <td>9049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReservationTest.registration_of_user()[pri:0, instance:com.test.ReservationTest@3aeaafa6]">registration_of_user</td> 
-  <td>main@1209669119</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/25 10:01:51</td>   <td>17207</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.ReservationTest@3aeaafa6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1209669119</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/04/03 14:00:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlwaysRunDemo1.method2()[pri:0, instance:basic.testng.concepts.alwaysOn_05.AlwaysRunDemo1@2353b3e6]">method2</td> 
+  <td>main@1484531981</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/04/03 14:00:34</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlwaysRunDemo1.method1()[pri:0, instance:basic.testng.concepts.alwaysOn_05.AlwaysRunDemo1@2353b3e6]">method1</td> 
+  <td>main@1484531981</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/04/03 14:00:34</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlwaysRunDemo1.method3()[pri:0, instance:basic.testng.concepts.alwaysOn_05.AlwaysRunDemo1@2353b3e6]">method3</td> 
+  <td>main@1484531981</td>   <td></td> </tr>
 </table>
